--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*, *::after, *::before{
+  box-sizing: border-box;
 }
+:root{
+  --hue:200;
+  --saturation: 50%;
+  --foregroundColor:hsl( var(--hue), var(--saturation), 75%);
+  --backgroundColor:hsl( var(--hue), var(--saturation), 10%);
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+html, body{
+  overflow: none;
+  position: fixed;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: var(--backgroundColor);
+  overflow: hidden;
+  @media(max-width:768px){
+      writing-mode: vertical-lr;
+      overflow: none;
+      
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
